added category page changes

--- a/Header.css
+++ b/Header.css
@@ -1206,10 +1206,38 @@ padding-right: 20px;
 }
 
 .desktop-footer {
-  background-color: #223459;
+  position: relative;
   color: white;
   padding: 40px 30px 20px;
-  
+  overflow: hidden;
+}
+
+.footer-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('asset/images/footer_image.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+.footer-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(34, 52, 89, 0.5);
+  z-index: 2;
+}
+
+.footer-container {
+  position: relative;
+  z-index: 3;
 }
 
 .footer-container {
@@ -1263,6 +1291,8 @@ padding-right: 20px;
 }
 
 .footer-bottom {
+  position: relative;
+  z-index: 3;
   text-align: center;
   margin-top: 0px;
   font-size: 14px;
