--- a/asset/style/privacy.css
+++ b/asset/style/privacy.css
@@ -279,7 +279,7 @@ body {
 .navbar {
   background-color: #fff;
   border-bottom: 1px solid #dee2e6;
-  padding: 0.5rem 1rem;
+  padding: 0 0.5px !important;
 }
 
 .navbar .logo {
